fixing modal on mobile (#37)

--- a/css/registration.css
+++ b/css/registration.css
@@ -82,10 +82,10 @@
 .dialog {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: calc(50% - 16px);
     transform: translate(-50%, -50%);
-    width: 433px;
-    height: 383px;
+    width: 320px;
+    height: auto;
     background-color: #fff;
     border-radius: 16px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
@@ -95,12 +95,12 @@
 }
 
 .dialog-delete {
-    width: 360px;
+    width: 320px;
     height: 483px;
 }
 
 .dialog-update {
-    width: 360px;
+    width: 320px;
     height: 700px;
 }
 
@@ -567,6 +567,16 @@
 
 .app-registration-signout {
     display: none;
+}
+
+@media screen and (min-width: 480px) {
+    .dialog {
+        width: 440px; 
+    }
+    .dialog-delete,
+    .dialog-update {
+        width: 360px;
+    }
 }
 
 @media screen and (min-width: 992px) {
